# claude-project-template

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CURRENT_STATE.md  README.md  pyproject.toml  requirement.txt
.claude/: settings.local.json
data/: CLAUDE.md  README.md
docs/: CLAUDE.md  README.md
notebooks/: CLAUDE.md  README.md
plan/: CLAUDE.md  README.md
recycle_bin/: CLAUDE.md  README.md
scripts/: CLAUDE.md  README.md
src/: CLAUDE.md  README.md
tests/: CLAUDE.md  README.md
to_do/: CLAUDE.md  P1_HIGH_example_task.md  README.md
