[project]
name = "my-project"
version = "0.1.0"
description = "[One-line project description]"
authors = [
    {name = "[Your Name]"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0.0"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Poetry configuration — package-mode=false for application projects (no installable package)
[tool.poetry]
package-mode = false